--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
     "chart.js": "^4.4.1",
+    "html-to-image": "^1.11.11",
     "qr-scanner": "^1.4.2",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
@@ -18,6 +20,7 @@
     "react-qr-scanner": "^1.0.0-alpha.11",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.15.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
